# FFChan

./: .qmlls.ini  CMakeLists.txt  README.md
qml/: Main.qml  MainWindow.qml  Wizard.qml
src/: Backend.cpp  Backend.h  CMakeLists.txt  Loader.cpp  Loader.h  Settings.cpp  Sysfetch.cpp  Sysfetch.h  icon.rc  main.cpp  qml.qrc
translations/: en.json  zh_CN.json
